# daw

./: .gitignore  Cargo.toml  README.md
src/: fileReader.rs  lib.rs  main.rs  play.rs  slint_build.rs  slint_logic.rs  slint_utils.rs  sound_design.rs  ui.rs  volume.rs  wave.rs
src/sound_design/: fft.rs  file_reader.rs  play.rs  render_song.rs  track_wave.rs  volume.rs  wave.rs
src/ui/: app_build.rs  consts.rs  dancing_wave.rs  display_clip.rs  flashing_kick.rs  main_app.rs
tests/: fileReader_tests.rs  play_tests.rs  volume_tests.rs
ui/: app-window.slint  daw.slint  file-player.slint  utils.slint
